Fix padding and add gap to ul

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -23,10 +23,6 @@ body {
   gap: 15px;
 }
 
-.right {
-  margin-left: auto;
-}
-
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
